[project]
name = "weather-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kripistor",email = "liss01062004l@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "prometheus-client (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
